# EngiPixi

./: .gitignore  EngiPixi Worl.pyxel  EngiPixi.workspace  Makefile  README.md  compile_commands.json
Data_s/Sprites/: Sprite-0001.aseprite
Engine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Collision.cpp  Collision.h  Components.h  EngiPixi.sln  EngiPixi.vcxproj  EngiPixi.vcxproj.filters  Engine.cpp  Engine.h  Engine.mk  Engine.project  Engine.sln  Engine.txt  Engine.vcxproj  Engine.vcxproj.filters  EntityComponentSystem.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  TexureManager.cpp  TexureManager.h  Tile.cpp  Tile.h  compile_flags.txt  main.cpp  valgrind.xml
Engine/Data/Sprites/: player.ase
Engine/Debug/: Engine
Engine/ECS/: Animation.h  ColliderComponent.cpp  ColliderComponent.h  Components.h  EntityComponentSystem.cpp  EntityComponentSystem.h  JoystickController.cpp  JoystickController.h  KeyboardController.cpp  KeyboardController.h  PhysicsComponent.cpp  PhysicsComponent.h  PositionComponent.cpp  PositionComponent.h  ProjectileComponent.cpp  ProjectileComponent.h  SpriteComponent.cpp  SpriteComponent.h  TileComponent.cpp  TileComponent.h  TransformComponent.cpp  TransformComponent.h  UILabel.cpp  UILabel.h
Engine/Helpers/: Caster.h  FpsHelper.cpp  FpsHelper.h  KeyboardHandler.cpp  KeyboardHandler.h  Logger.h
Engine/Helpers/Debug/: Assert.h  FpsHelper.cpp  FpsHelper.h
Engine/Math/: Vector2D.cpp  Vector2D.h
Engine/assets/data/maps/: big_map.map
Engine/assets/sprites/: Sprite-0001-Sheet.aseprite  basic_tree.aseprite  big_map.map  collider_map.txt  dirt.aseprite  grass.aseprite  terrain_map.map  water.aseprite
Engine/src/Helpers/Debug/: Assert.h
Tests/: Tests.mk  Tests.project  compile_flags.txt
